# PitchEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tuple.h  audioUtils.c  audioUtils.cpp  audioUtils.h  build.sh  fft.c  fft.h  fft.out  main.c  main.h  maxHeap.h  plotVar.py  plot_frequency.py  setI.cpp  setI.h  syseqsolver.c  tags  test.cpp  wavio  wavio.c  wavio.h
resources/: sine_chirp_impulse.flp
scripts/: build.sh  createEnvironment.sh  plotVar.py
src/: CMakeLists.txt  CMakeSettings.json  CQPVEngine.cpp  CQPVEngine.h  DSPConfig.h  DSPConfig.h.in  DSPSimConfig.h  Dumper.cpp  Dumper.h  DumperContainer.cpp  DumperContainer.h  Makefile  NNPVEngineTrainer.cpp  NNPVEngineTrainer.h  PVDREngine.cpp  PVDREngine.h  PVEngine.cpp  PVEngine.h  PitchEngine.cpp  PitchEngine.h  PitchEngineConfig.h  PitchEngineConfig.h.in  StrechEngine.cpp  StrechEngine.h  Timer.cpp  Timer.h  TimerContainer.cpp  TimerContainer.h  Tuple.h  audioData.c  audioData.h  audioUtils.cpp  audioUtils.h  logger.cpp  logger.h  main.c  main.h  maxHeap.cpp  pe_common_defs.h  test.cpp  (+2 more)
src/debug/: CMakeLists.txt  Dumper.cpp  Dumper.h  DumperContainer.cpp  DumperContainer.h  ProgressBar.cpp  ProgressBar.h  ProgressBarContainer.cpp  ProgressBarContainer.h  Timer.cpp  Timer.h  TimerContainer.cpp  TimerContainer.h  logger.h
src/engine/: CMakeLists.txt  CQPVEngine.cpp  CQPVEngine.h  NNPVEngineTrainer.cpp  PVDREngine.cpp  PVDREngine.h  PVEngine.cpp  PVEngine.h  PitchEngine.cpp  PitchEngine.h  StrechEngine.cpp  StrechEngine.h  audioData.h  audioUtils.cpp  audioUtils.h  pe_common_defs.h
src/kissfft/: CMakeLists.txt  Makefile  kissfft-float.pc  kissfft.pc.in
src/kissfft/test/: CMakeLists.txt  Makefile  testkiss.py
src/kissfft/tools/: CMakeLists.txt  psdpng.c
test/: CMakeLists.txt  PitchEngineTs.cpp  PitchEngineTs.h  TaskScheduler.h  logger.h  main.cpp  main.h  parameterTemplates.h  test.cpp
tools/: CMakeLists.txt  ParameterCombinations.cpp  ParameterCombinations.h  ParameterManager.cpp  ParameterManager.h  build.sh  clean_data.py  createEnvironment.sh  generateOuputs.py  main.py  memory_usage.py  parameterValidation.cpp  parameterValidation.h  plotFunction.py  plotVar.py  plot_frequency.py  printCsvDifferences.py  testCPUSpeed.cpp  trainEngine.py  wavio.cpp  wavio.h
